...
                                        <rect key="frame" x="0.0" y="0.0" width="768" height="960"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                    </imageView>
                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WTY-HS-Cdj">
                                        <rect key="frame" x="0.0" y="916" width="768" height="44"/>
                                        <items>
                                            <barButtonItem title="RESET" id="sCW-Mi-TsS">
                                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                            </barButtonItem>
                                            <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="cxP-oF-cD7"/>
                                            <barButtonItem title="START" id="Xwj-KU-CBz">
                                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                            </barButtonItem>
                                            <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="OBq-bh-wez"/>
                                            <barButtonItem title="LOAD" id="mRX-Av-vWW">
                                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                            </barButtonItem>
                                            <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="nmy-Jc-ncN"/>
                                            <barButtonItem title="SAVE" id="Hii-BE-78V">
                                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                            </barButtonItem>
                                            <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="aHW-2O-ddO"/>
                                            <barButtonItem title="MANAGE" id="jll-OR-Bwo">
                                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                            </barButtonItem>
                                            <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="Nnf-oz-yFm"/>
                                            <barButtonItem title="Exit" id="lZ2-pI-vNL"/>
                                        </items>
                                    </toolbar>
...
